# mg400_ws

./: .gitignore  CLAUDE.md  README.md
mg400_bringup/: CMakeLists.txt  package.xml
mg400_bringup/config/: mg400_driver.yaml  mg400_params.yaml
mg400_bringup/launch/: mg400.launch.py
mg400_driver/: package.xml  setup.cfg  setup.py
mg400_driver/mg400_driver/: driver_node.py
mg400_interfaces/: CMakeLists.txt  package.xml
mg400_interfaces/action/: MoveJoint.action  MoveL.action
mg400_interfaces/srv/: ClearError.srv  SetEnabled.srv
mg400_pkg/: package.xml  setup.cfg  setup.py
mg400_pkg/mg400_pkg/: move_control_node.py  move_node.py  nav_and_move.py  nav_and_return.py  status_node.py  test.py  test_mg400.py
mg400_pkg_msgs/: CMakeLists.txt  package.xml
mg400_pkg_msgs/srv/: MoveTo.srv
src/mg400_pkg/: package.xml  setup.py
src/mg400_pkg/mg400_pkg/: move_node.py  move_service_server.py
